fix(creature): move armature node to separate file + fix z-index

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@ header {
 
     width: 20vw;
     height: 100%;
+
+    z-index: 10;
 }
 
 .config-option {
